see the sub bulleted list

--- a/BasicHTMLExercise2.html
+++ b/BasicHTMLExercise2.html
@@ -9,11 +9,13 @@
 	<div><img src="https://i.ytimg.com/vi/SfLV8hD7zX4/maxresdefault.jpg"></div>
 	<div>
 		<h2>Some of my favorite places:</h2>
-		<ul>
+		<ol>
 			<li>The beach</li>
+			<ul>
+				<li> Miami</li>
 			<li>The dog park</li>
 			<li>The fire hydrant</li>
-		</ul>
+		</ol>
 	</div>
 	<div>
 		Make sure to follow me on 
